--- a/add-expense.html
+++ b/add-expense.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="description" content="Add shared expenses - Roommate Expense Tracker">
     <title>Add Expense - Roommate Expenses</title>
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💰</text></svg>">
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>➕</text></svg>">
+
     <style>
         .split-type-content {
             display: none;
+            animation: fadeInUp 0.3s ease;
         }
 
         .split-type-content.active {
@@ -28,55 +32,70 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-weight: 600;
+            font-weight: var(--font-weight-bold);
             color: white;
-            font-size: 0.875rem;
-        }
-
-        .category-option {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5rem;
-            padding: 1rem;
-            border-radius: var(--radius-lg);
-            border: 2px solid var(--border-color);
-            background: var(--bg-secondary);
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        .category-option.active {
-            border-color: var(--primary-600);
-            background: var(--primary-50);
-        }
-
-        .category-icon {
-            font-size: 2rem;
-        }
-
-        .category-name {
-            font-size: 0.875rem;
-            font-weight: 500;
+            font-size: var(--font-size-sm);
+            flex-shrink: 0;
+            box-shadow: var(--shadow-sm);
+            border: 2px solid var(--bg-primary);
         }
 
         .custom-split-input-group {
             display: flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 0.75rem;
+            gap: var(--spacing-md);
+            padding: var(--spacing-md);
+            background-color: var(--bg-secondary);
+            border-radius: var(--radius-lg);
+            border: 1px solid var(--border-color);
+            margin-bottom: var(--spacing-md);
+            transition: all var(--transition-fast);
+        }
+
+        .custom-split-input-group:hover {
+            background-color: var(--bg-tertiary);
+            border-color: var(--primary-300);
         }
 
         .custom-split-input-group label {
             flex: 1;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: var(--spacing-md);
+            font-weight: var(--font-weight-medium);
+            cursor: pointer;
         }
 
         .custom-split-input-group input {
-            width: 120px;
+            width: 100px;
             text-align: right;
+            padding: 0.5rem var(--spacing-md);
+            background-color: var(--bg-primary);
+            border: 1px solid var(--border-color);
+            border-radius: var(--radius-md);
+            font-size: var(--font-size-sm);
+            transition: all var(--transition-fast);
+        }
+
+        .custom-split-input-group input:focus {
+            outline: none;
+            border-color: var(--primary-600);
+            box-shadow: 0 0 0 3px var(--primary-100);
+        }
+
+        .remove-split-btn {
+            padding: var(--spacing-md);
+            background-color: var(--danger-50);
+            border: 1px solid var(--danger-200);
+            color: var(--danger-600);
+            border-radius: var(--radius-md);
+            cursor: pointer;
+            transition: all var(--transition-fast);
+        }
+
+        .remove-split-btn:hover {
+            background-color: var(--danger-100);
+            border-color: var(--danger-300);
         }
     </style>
 </head>
@@ -280,7 +299,11 @@
         <div class="toast-container" id="toastContainer"></div>
     </div>
 
+    <!-- JavaScript Modules -->
     <script src="js/storage.js"></script>
+    <script src="js/members.js"></script>
+    <script src="js/presence.js"></script>
+    <script src="js/utils.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             initExpenseForm();
