--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="description" content="Settings - Roommate Expense Tracker">
+    <meta name="theme-color" content="#0284c7">
     <title>Settings - Roommate Expenses</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -40,6 +42,8 @@
             justify-content: space-between;
             padding: 1rem 0;
             border-bottom: 1px solid var(--border-color);
+            flex-wrap: wrap;
+            gap: 1rem;
         }
 
         .setting-item:last-child {
@@ -48,6 +52,7 @@
 
         .setting-info {
             flex: 1;
+            min-width: 200px;
         }
 
         .setting-title {
@@ -116,11 +121,6 @@
             min-width: 120px;
         }
 
-        .number-control {
-            width: 80px;
-            text-align: center;
-        }
-
         .danger-zone {
             border: 2px solid var(--danger-200);
             background: var(--danger-50);
@@ -130,33 +130,11 @@
             color: var(--danger-700);
         }
 
-        .pin-input-container {
-            display: flex;
-            gap: 0.5rem;
-            margin: 1rem 0;
-        }
-
-        .pin-input {
-            width: 3rem;
-            height: 3rem;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: 600;
-            border: 2px solid var(--border-color);
-            border-radius: var(--radius-md);
-            background: var(--bg-primary);
-            color: var(--text-primary);
-        }
-
-        .pin-input:focus {
-            border-color: var(--primary-600);
-            outline: none;
-        }
-
         .pin-dots {
             display: flex;
             gap: 0.5rem;
             margin: 1rem 0;
+            justify-content: center;
         }
 
         .pin-dot {
@@ -201,21 +179,180 @@
             grid-column: span 2;
         }
 
-        .empty-state {
-            text-align: center;
-            padding: 3rem 1rem;
-            color: var(--text-secondary);
+        .setting-actions {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
         }
 
-        .empty-state-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            opacity: 0.3;
+        .setting-actions .btn {
+            flex: 1;
         }
 
-        .empty-state-message {
-            font-size: 1rem;
-            margin-bottom: 1.5rem;
+        /* Message Styles */
+        .warning-message {
+            display: flex;
+            gap: 0.75rem;
+            padding: 1rem;
+            border-radius: var(--radius-md);
+            background-color: var(--danger-50);
+            border-left: 4px solid var(--danger-500);
+            color: var(--danger-700);
+            margin: 1rem 0;
+        }
+
+        .warning-message svg {
+            flex-shrink: 0;
+            color: var(--danger-500);
+        }
+
+        .info-message {
+            display: flex;
+            gap: 0.75rem;
+            padding: 1rem;
+            border-radius: var(--radius-md);
+            background-color: var(--info-50);
+            border-left: 4px solid var(--info-500);
+            color: var(--info-600);
+            margin: 1rem 0;
+        }
+
+        .info-message svg {
+            flex-shrink: 0;
+            color: var(--info-500);
+        }
+
+        /* Modal Actions */
+        .modal-actions {
+            display: flex;
+            gap: 0.75rem;
+            margin-top: 1.5rem;
+        }
+
+        .modal-actions .btn {
+            flex: 1;
+        }
+
+        /* Utility Classes */
+        .full-width {
+            width: 100%;
+        }
+
+        .mt-2 {
+            margin-top: 0.5rem;
+        }
+
+        .mt-3 {
+            margin-top: 1rem;
+        }
+
+        .mb-2 {
+            margin-bottom: 0.5rem;
+        }
+
+        @media (max-width: 640px) {
+            .settings-section {
+                padding: 1rem;
+                margin-bottom: 1rem;
+                border-radius: var(--radius-md);
+            }
+
+            .settings-section h2 {
+                font-size: 1.125rem;
+                margin-bottom: 1rem;
+            }
+
+            .setting-item {
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0.75rem 0;
+                gap: 0.5rem;
+            }
+
+            .setting-control {
+                width: 100%;
+                margin-left: 0;
+            }
+
+            .select-control {
+                width: 100%;
+            }
+
+            .form-control {
+                width: 100%;
+            }
+
+            .keypad {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            .keypad-btn {
+                height: 3rem;
+                font-size: 1.125rem;
+            }
+
+            .switch {
+                width: 48px;
+                height: 26px;
+            }
+
+            .slider:before {
+                height: 18px;
+                width: 18px;
+            }
+
+            input:checked+.slider:before {
+                transform: translateX(22px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .app-container {
+                padding-bottom: calc(80px + 1rem);
+            }
+
+            .settings-section {
+                padding: 0.75rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .settings-section h2 {
+                font-size: 1rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .settings-section h2 .icon {
+                font-size: 1.25rem;
+            }
+
+            .setting-item {
+                padding: 0.5rem 0;
+                gap: 0.25rem;
+            }
+
+            .setting-title {
+                font-size: 0.95rem;
+            }
+
+            .setting-description {
+                font-size: 0.8rem;
+            }
+
+            .keypad {
+                gap: 0.375rem;
+            }
+
+            .keypad-btn {
+                height: 2.75rem;
+                font-size: 1rem;
+                padding: 0.5rem;
+            }
+
+            .pin-dot {
+                width: 0.875rem;
+                height: 0.875rem;
+            }
         }
     </style>
 </head>
@@ -673,7 +810,7 @@
                     <input type="file" id="importFile" class="form-control" accept=".json">
                 </div>
                 <div class="modal-actions">
-                    <button class="btn secondary-btn" data-modal="importModal">Cancel</button>
+                    <button class="btn secondary-btn close-modal" data-modal="importModal">Cancel</button>
                     <button class="btn primary-btn" id="confirmImportBtn">Import Data</button>
                 </div>
             </div>
@@ -701,7 +838,7 @@
                         undone.</p>
                 </div>
                 <div class="modal-actions">
-                    <button class="btn secondary-btn" data-modal="clearDataModal">Cancel</button>
+                    <button class="btn secondary-btn close-modal" data-modal="clearDataModal">Cancel</button>
                     <button class="btn danger-btn" id="confirmClearBtn">Clear All Data</button>
                 </div>
             </div>
@@ -729,7 +866,7 @@
                         affected.</p>
                 </div>
                 <div class="modal-actions">
-                    <button class="btn secondary-btn" data-modal="resetSettingsModal">Cancel</button>
+                    <button class="btn secondary-btn close-modal" data-modal="resetSettingsModal">Cancel</button>
                     <button class="btn warning-btn" id="confirmResetBtn">Reset Settings</button>
                 </div>
             </div>
@@ -756,7 +893,7 @@
                         affected.</p>
                 </div>
                 <div class="modal-actions">
-                    <button class="btn secondary-btn" data-modal="clearCacheModal">Cancel</button>
+                    <button class="btn secondary-btn close-modal" data-modal="clearCacheModal">Cancel</button>
                     <button class="btn primary-btn" id="confirmClearCacheBtn">Clear Cache</button>
                 </div>
             </div>
